Switch i18n names over.

--- a/src/management-ui/component/Audience.html
+++ b/src/management-ui/component/Audience.html
@@ -17,7 +17,7 @@
             <td class="key-value-list__value key-value-list__auto--auto lpg-department">
                 <ul>
                     {#each audience.departments as department}
-                    <li class="audience__item">{ $i18n('departments')[department]}</li> {/each}
+                    <li class="audience__item">{ $i18n('department')[department]}</li> {/each}
                 </ul>
             </td>
             <td >
@@ -29,7 +29,7 @@
             <td class="key-value-list__value key-value-list__value--auto lpg-profession">
                 <ul>
                     {#each audience.areasOfWork as aow}
-                    <li class="audience__item">{ $i18n('areas-of-work')[aow]}</li> {/each}
+                    <li class="audience__item">{ $i18n('areaOfWork')[aow]}</li> {/each}
                 </ul>
             </td>
             <td >
@@ -50,7 +50,7 @@
             <td class="key-value-list__key key-value-list__key--auto">{$i18n('audience_interest_label')}</td>
             <td class="key-value-list__value key-value-value--auto lpg-interest">
                 {#each audience.interests as interest}
-                <li class="audience__item">{ $i18n('interests')[interest]}</li> {/each}
+                <li class="audience__item">{ $i18n('interest')[interest]}</li> {/each}
             </td>
             <td >
                 <button name="submit" type="submit" class="button audience__button" value="change_{i}_interest">Change</button>
