--- a/src/ui/component/DisciteCourse.html
+++ b/src/ui/component/DisciteCourse.html
@@ -25,7 +25,7 @@
         {#if course.nextRequiredBy($signedInUser)}
             Due by: {$datetime.formatDate(course.nextRequiredBy($signedInUser))}
         {:elseif course.getAreasOfWork().length}
-            Work area: {course.getAreasOfWork().map(function(aow) { return $i18n('areas-of-work')[aow]}).join(', ')}
+            Work area: {course.getAreasOfWork().map(function(aow) { return $i18n('areaOfWork')[aow]}).join(', ')}
         {/if}
     </div>
 
