--- a/src/ui/component/Tile.html
+++ b/src/ui/component/Tile.html
@@ -7,10 +7,10 @@
 	{#if home}
 	<p class="tile__attribution">{isLast ? 'Department:' : 'Work area: '}
 	{#if isLast}
-     {$i18n('departments')[$signedInUser.department]}
+     {$i18n('department')[$signedInUser.department]}
 	{:elseif course.getAreasOfWork().length}
 	    {#each course.getAreasOfWork() as aow, index}
-	        {$i18n('areas-of-work')[aow]}{course.getAreasOfWork().length !== index + 1 ? ', ' : ''}
+	        {$i18n('areaOfWork')[aow]}{course.getAreasOfWork().length !== index + 1 ? ', ' : ''}
 	    {/each}
     {/if}
 	</p>
