Filter collapse styling.

--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -20,6 +20,7 @@
 @import 'components/rightbox';
 @import 'components/basket';
 @import 'components/feedback';
+@import 'components/filter';
 @import 'components/govuk-related-items';
 
 @import 'components/results';
