--- a/src/ui/component/LeftSearchBox.html
+++ b/src/ui/component/LeftSearchBox.html
@@ -44,7 +44,7 @@
             </fieldset>
         </div>
 
-        <div class="govuk-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox collapse">
+        <div class="govuk-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox filter-toggle filter-toggle--shut">
             <fieldset>
                 <legend>
                     <h2 class="heading-medium">Other departments</h2>
@@ -72,7 +72,7 @@
             </fieldset>
         </div>
 
-        <div class="govuk-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox collapse">
+        <div class="govuk-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox filter-toggle filter-toggle--shut">
             <fieldset>
                 <legend>
                     <h2 class="heading-medium">Other areas of work</h2>
@@ -100,7 +100,7 @@
             </fieldset>
         </div>
 
-        <div class="govuk-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox collapse">
+        <div class="govuk-related-items govuk-related-items--flush form-group govuk-related-items--keylined govuk-related-items--keylined--search leftSearchBox filter-toggle filter-toggle--shut">
             <fieldset>
                 <legend>
                     <h2 class="heading-medium">Other interests</h2>
