--- a/src/ui/assets/styles/common/_variables.scss
+++ b/src/ui/assets/styles/common/_variables.scss
@@ -11,14 +11,16 @@ $proposition-border: #2e3133;
 // Based on GOV.UK brand blue but slightly lighter so it hits contrast on the
 // black header bar when used as copy colour.
 $proposition-active-nav: #af292e;
+$cs-red: #af292e;
 
 $footer-background: $grey-3;
 $footer-border-top: #a1acb2;
 $footer-link: #454a4c;
 $footer-link-hover: #171819;
 $footer-text: $footer-link;
-$optional-text : $footer-text;
+$optional-text: $footer-text;
 
 $grey: #aaa;
+$light-grey: #f8f8f8;
 $white: #fff;
 $fonts-dir: '/assets/fonts/';
