Most booking UI changes done.

--- a/src/ui/component/statics/Hidden-howtogetpo.html
+++ b/src/ui/component/statics/Hidden-howtogetpo.html
@@ -1,8 +1,7 @@
 <details class="push-bottom">
 	<summary>
-		<span class="summary">How to get a purchase order number</span>
+		<span class="summary">How to get a PO number</span>
 	</summary>
-
 	<div class="panel panel-border-narrow">
 		<p>
 			To find out your department's process for setting up a purchase order
