--- a/src/ui/assets/styles/components/_booking.scss
+++ b/src/ui/assets/styles/components/_booking.scss
@@ -11,7 +11,7 @@
 	}
 
 	@include e(details) {
-		margin-top: 20px;
+		margin: 20px 0;
 	}
 
 	@include e(col-heading) {
@@ -53,19 +53,25 @@
 		width: 33%;
 	}
 	@include e(panel) {
-		border-top: 1px solid $grey-2;
 		padding-bottom: 20px;
 		position: relative;
+
+		@include e(row) {
+			border-top: 1px solid $grey-2;
+			padding: 1rem 0;
+
+			&:last-child {
+				border-bottom: 1px solid $grey-2;
+			}
+		}
+
+		.heading-small {
+			margin-bottom: 1rem;
+		}
 	}
 	@include e(change) {
-		position: absolute;
-		top: 50%;
-		right: 0;
-		transform: translateY(-50%);
-		@media (max-width: 640px) {
-			top: 20px;
-			right: 15px;
-		}
+		float: right;
+		font-weight: normal;
 	}
 
 	@include e(table) {
