Record other accessibility options.

--- a/src/ui/component/AccessibilityOptions.html
+++ b/src/ui/component/AccessibilityOptions.html
@@ -39,7 +39,7 @@
     </div>
 
     <div class="form-group">
-        <input class="form-control" name="other-description" type="text">
+        <input class="form-control" name="otherDescription" type="text" value="{ otherAccessibilityReqs || '' }">
         <p>If you have indicated 'Other' accessibility needs, you may be contacted by our helpdesk to confirm your specific requirements.</p>
     </div>
 
