--- a/src/ui/component/LeftSearchBox.html
+++ b/src/ui/component/LeftSearchBox.html
@@ -8,7 +8,7 @@
                 </legend>
                 {#each Object.entries($i18n('courseTypes')) as filter}
                     <div class="multiple-choice">
-                        <input type="checkbox" value="{filter[0]}" name="courseType" id="{filter[0]}"  checked="{(courseType || []).indexOf(filter[1]) > -1 ? 'checked' : ''}" >
+                        <input type="checkbox" value="{filter[0]}" name="courseType" id="{filter[0]}"  checked="{(courseTypes || []).indexOf(filter[0]) > -1 ? 'checked' : ''}" >
                         <label for="{filter[0]}">{filter[1]}</label>
                     </div>
                 {/each}
