--- a/src/management-ui/component/Audience.html
+++ b/src/management-ui/component/Audience.html
@@ -59,8 +59,7 @@
         <tr>
             <td class="key-value-list__key key-value-list__key--auto">{$i18n('audience_optional_label')}</td>
             <td class="key-value-list__value key-value-value--auto lpg-optional">
-                <input id="optional" type="checkbox" name="optional" value="true" checked="{ audience.optional === true || audience.optional === 'true' ? 'checked' : '' }"
-                    disabled="disabled">
+                { (audience.mandatory === false || audience.mandatory === 'false') ? 'Yes' : 'No' }
             </td>
             <td >
                 <button name="submit" type="submit" class="button audience__button" value="change_{i}_optional">Change</button>
