learner-record page moved to new learner record model.

--- a/src/ui/component/LearningRecordTable.html
+++ b/src/ui/component/LearningRecordTable.html
@@ -8,14 +8,14 @@
         </tr>
     </thead>
     <tbody>
-        {#each courses as course}
+        {#each courses as record}
         <tr>
             <td>
-                <a href="/courses/{course.id}">{course.title} </a>
+                <a href="/courses/{record.courseId}">{record.courseTitle} </a>
             </td>
-            <td>{$i18n(course.getType())}</td>
-            <td>{course.getDuration() || '-'}</td>
-            <td>{course.getCompletionDate() ? $datetime.formatDate(course.getCompletionDate()) : ''}</td>
+            <td>{$i18n(record.getType())}</td>
+            <td>{record.getDuration() || '-'}</td>
+            <td>{record.getCompletionDate() ? $datetime.formatDate(record.getCompletionDate()) : ''}</td>
         </tr>
         {/each}
     </tbody>
