--- a/src/ui/component/disciteParts/DisciteModuleMain.html
+++ b/src/ui/component/disciteParts/DisciteModuleMain.html
@@ -1,5 +1,6 @@
 {#if modifier === 'search'}
 <div class="discite__area discite__area--search">
+    <h3 class="heading bold-small heading--text">{module.title}</h3>
     <p class="font-small discite__counter">
         This is a module in
         <a href="/courses/{course.id}">
