--- a/src/ui/assets/styles/components/_search.scss
+++ b/src/ui/assets/styles/components/_search.scss
@@ -1,9 +1,9 @@
 .search-box {
-	background-color: #af292e;
 	margin-bottom: 0;
 
 	@include e(input) {
 		width: 100%;
+		padding-right: 40px;
 	}
 
 	@include e(group) {
@@ -38,19 +38,24 @@
 		overflow: hidden;
 		width: 33px;
 		height: 33px;
-		right: 10px;
+		right: 54px;
 		top: 20px;
 		border: 0;
 		text-indent: 200px;
 		background-color: #0b0c0c;
-		background-image: url(/img/icon-search.png);
+		background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg width='33px' height='31px' viewBox='0 0 33 31' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Ctitle%3EGroup%3C/title%3E%3Cdesc%3ECreated with Sketch.%3C/desc%3E%3Cg id='Page-1' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cg id='Group' transform='translate(2.000000, 2.000000)'%3E%3Ccircle id='Oval' stroke='%23FFFFFF' stroke-width='4' cx='11' cy='11' r='11'%3E%3C/circle%3E%3Cpolygon id='Rectangle' fill='%23FFFFFF' points='20.4732919 15 30.5440491 24.7252172 27.0707572 28.3219162 17 18.596699'%3E%3C/polygon%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 		background-repeat: no-repeat;
-		background-position: 5px 50%;
+		background-position: center;
+		background-size: 64%;
+		cursor: pointer;
 
-		@media (min-width: 769px) {
+		@media (min-width: 641px) {
 			width: 38px;
 			height: 38px;
-			background-position: 7px 50%;
+		}
+
+		@media (min-width: 769px) {
+			right: 59px;
 		}
 	}
 
