--- a/src/ui/assets/styles/components/_badge.scss
+++ b/src/ui/assets/styles/components/_badge.scss
@@ -9,7 +9,7 @@
 	text-align: center;
 	vertical-align: middle;
 	white-space: nowrap;
-
+	text-transform: capitalize;
 	// Default badge
 	background-color: $white;
 	color: $text-colour;
