--- a/src/ui/assets/styles/components/_discite.scss
+++ b/src/ui/assets/styles/components/_discite.scss
@@ -1,5 +1,5 @@
 $module: 'discite';
-// diss-it-ay
+// diss-ite
 
 %disciteRowDiv {
 	@include box-sizing(border-box);
@@ -73,7 +73,7 @@ $module: 'discite';
 		@include media(desktop) {
 			position: absolute;
 			display: block;
-			width: 200px;
+			width: 280px;
 			float: none;
 			top: 0;
 			right: 0;
@@ -83,7 +83,7 @@ $module: 'discite';
 
 	@include e(property) {
 		// ul.discite__property the actual data about the discite thing
-		width: 100%;
+		width: 50%;
 		float: left;
 
 		.badge {
@@ -200,4 +200,13 @@ $module: 'discite';
 		margin-bottom: 0;
 		color: $optional-text;
 	}
+}
+
+// TODO: Mick, please tidy this up! Love, Matt.
+@include media(desktop) {
+	.discite__main--module {
+		 .discite__description {
+			margin-right: 0px;
+		 }
+	 }
 }
