--- a/src/ui/component/SuggestionsSection.html
+++ b/src/ui/component/SuggestionsSection.html
@@ -30,7 +30,7 @@
       {#if home === true }
         <p><a href="/suggestions-for-you">{$i18n('home_page_suggestions_link')}</a></p>
       {:elseif (suggestedLearning.length === 6)}
-          <p><a href="/search?{type}={title}&expand={title}">Show all suggestions from {title}</a></p>
+          <p><a href="/search?{type}={code}">Show all suggestions from {title}</a></p>
       {/if}
       </div>
   </div>
