added suggestions for you quick links

--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -1,5 +1,6 @@
 @import 'common/utils';
 @import 'custom';
+@import 'variables';
 
 @import 'common/variables';
 @import 'common/fonts';
@@ -21,7 +22,7 @@
 @import 'components/feedback';
 @import 'components/filter';
 @import 'components/govuk-related-items';
-
+@import 'components/suggestions';
 @import 'components/results';
 @import 'components/booking';
 @import 'components/search';
