--- a/src/ui/component/SuggestionsSection.html
+++ b/src/ui/component/SuggestionsSection.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="grid-row">
       <div class="column-full">
-          <h2 class="heading-medium u-space-t30 {home ? '': 'heading--red-top'} lpg-suggestions-section">
+          <h2 class="heading-medium u-space-t30 {home ? '': 'heading--red-top'} lpg-suggestions-section" id="{id}">
             {home ? '' : 'From '}{title}
           </h2>
           {#if lede}
