suggestions for you changes

--- a/src/ui/assets/styles/common/_variables.scss
+++ b/src/ui/assets/styles/common/_variables.scss
@@ -15,6 +15,7 @@ $cs-red: #af292e;
 
 $footer-background: $grey-3;
 $footer-border-top: #a1acb2;
+$alt-color: #dee0e2;
 $footer-link: #454a4c;
 $footer-link-hover: #171819;
 $footer-text: $footer-link;
