--- a/src/ui/assets/styles/main.scss
+++ b/src/ui/assets/styles/main.scss
@@ -22,6 +22,7 @@
 @import 'components/filter';
 @import 'components/govuk-related-items';
 
+@import 'components/suggestions';
 @import 'components/results';
 @import 'components/booking';
 @import 'components/search';
