--- a/src/ui/component/TypeAhead.html
+++ b/src/ui/component/TypeAhead.html
@@ -1,4 +1,5 @@
-<label class="visuallyhidden" for="{inputName}">{label}</label>
+<label for="{inputName}">{label}</label>
+<p class="govuk-body hint no-margin">Start typing to find your organisation name</p>
 <select class="form-control type-ahead" id="{inputName}" name="{inputName}">
     <option value="other">Start typing to search</option>
     {#each options as option}
