--- a/src/ui/component/ProfileEditForm.html
+++ b/src/ui/component/ProfileEditForm.html
@@ -1,4 +1,4 @@
-<form autocomplete="nope" method="post" class="push-bottom" action="/profile/{inputName}">
+<form autocomplete="off" method="post" class="push-bottom push-top" action="/profile/{inputName}">
     {#if inputName === 'password'}
     <p>
         Password should be at least 8 characters long and contain at least one from 3 of the
@@ -28,10 +28,10 @@
     <div class="grid-row ">
         <div class="column-full">
             <div class="form-group">
-                <button type="submit" class="button">Continue</button>
+                <button type="submit" class="button">Save changes</button>
             </div>
             <p>
-                <a class="link-back" href="/profile">Back</a>
+                <a class="link-back" href="/profile">Cancel</a>
             </p>
         </div>
     </div>
