removed 'nope' from autocompleted and replaces with 'off'

--- a/src/ui/component/LeftSearchBox.html
+++ b/src/ui/component/LeftSearchBox.html
@@ -1,5 +1,5 @@
 <aside role="complementary">
-    <form autocomplete="nope" name="searchLearning" method="get" action="/search">
+    <form autocomplete="off" name="searchLearning" method="get" action="/search">
         <input type="hidden" id="q" name="q" value="{ query }" />
         <div class="lpg-related-items form-group govuk-related-items--search leftSearchBox">
             <fieldset>
