--- a/src/ui/component/disciteParts/DisciteModuleMain.html
+++ b/src/ui/component/disciteParts/DisciteModuleMain.html
@@ -14,7 +14,7 @@
     <p class="font-small discite__counter--search">There { $req.__n('is', course.modules.length)} in total.</p>
 </div>
 {:else}
-<div class="discite__main discite__main--module">
+<div class="discite__main discite__main--module {type}">
     <h3 class="heading bold-small heading--text">{module.title}</h3>
     {#if module.description}
     <p class="discite__description">{module.description}</p>
