fixed link page width

--- a/src/ui/assets/styles/components/_discite.scss
+++ b/src/ui/assets/styles/components/_discite.scss
@@ -38,7 +38,7 @@ $module: 'discite';
 		@include media(desktop) {
 			padding-right: 300px;
 
-			&.video {
+			&.single {
 				padding-right: 0;
 			}
 		}
