--- a/src/ui/component/disciteParts/DisciteModuleProperties.html
+++ b/src/ui/component/disciteParts/DisciteModuleProperties.html
@@ -1,4 +1,5 @@
-{#if type !== "video"}
+{#if type !== "single"}
+{type}
     <div class="discite__properties {modifier ? `discite__properties--${modifier}` : ''} u-clearfix">
         <ul class="discite__property {modifier ? `discite__property--${modifier}` : ''}">
             <li class="discite__property-item">
