changed typeahead placeholder text

--- a/src/ui/component/TypeAhead.html
+++ b/src/ui/component/TypeAhead.html
@@ -1,7 +1,7 @@
 <label for="{inputName}">{label}</label>
 <p class="govuk-body hint no-margin">Start typing to find your organisation name</p>
 <select class="form-control type-ahead" id="{inputName}" name="{inputName}">
-    <option value="other">Start typing to search</option>
+    <option value="other">Select an organisation</option>
     {#each options as option}
         <option value="{option[0]}">{option[1]}</option>
     {/each}
