updated search box styling

--- a/src/ui/assets/styles/components/_search.scss
+++ b/src/ui/assets/styles/components/_search.scss
@@ -4,16 +4,19 @@
 	@include e(input) {
 		width: 100%;
 		padding-right: 40px;
+		float: right;
 	}
 
 	@include e(group) {
 		position: relative;
-		padding: 20px 53px 20px 10px;
+		padding: 0 0 20px 0;
 		width: 100%;
+		float: right;
 
 		@media (min-width: 769px) {
 			min-height: 60px;
-			padding: 20px 58px 20px 10px;
+			padding: 0 0 20px 10px;
+			width: 390px;
 		}
 	}
 
@@ -38,8 +41,8 @@
 		overflow: hidden;
 		width: 33px;
 		height: 33px;
-		right: 54px;
-		top: 20px;
+		right: 0;
+		top: 0;
 		border: 0;
 		text-indent: 200px;
 		background-color: #0b0c0c;
@@ -52,10 +55,6 @@
 		@media (min-width: 641px) {
 			width: 38px;
 			height: 38px;
-		}
-
-		@media (min-width: 769px) {
-			right: 59px;
 		}
 	}
 
@@ -85,5 +84,12 @@
 
 	.heading-medium {
 		margin: 1rem 0 0.5rem;
+	}
+}
+
+.no-border {
+	.u--space--y30,
+	.u--border--bgrey2 {
+		border: none;
 	}
 }
