--- a/src/ui/component/disciteParts/DisciteModuleActions.html
+++ b/src/ui/component/disciteParts/DisciteModuleActions.html
@@ -1,17 +1,18 @@
 <div class="discite__action discite__action--module">
-    {#if module.type === 'link' && course.status !== "Archived"}
-    {@html `<a href="${cta.url}" target="_blank" ${cta.learningAction.attribute} >`}
-    {:else}
-    {@html `<a href="${cta.url}" ${cta.learningAction.attribute} >`}
+    {#if module.type === 'link' && !course.isArchived() }
+        {@html `<a href="${cta.url}" target="_blank" ${cta.learningAction.attribute} >`}
+    {:elseif !course.isArchived()}
+        {@html `<a href="${cta.url}" ${cta.learningAction.attribute} >`}
     {/if}
-        {$i18n(cta.learningAction.text)}
+        {#if !course.isArchived()}
+            {$i18n(cta.learningAction.text)}
+        {/if}
     {@html `</a>`}  {cta.learningAction.fileHelper ? cta.learningAction.fileHelper : ''}
-    {#if cta.actionToPlan && course.status !== "Archived"}
+    {#if cta.actionToPlan && !course.isArchived() }
         {#if (cta.actionToPlan.url && cta.actionToPlan.type === 'Add')}
             <a class="lpg-add-from-search" href="{cta.actionToPlan.url}">Add to learning plan</a>
             {:else}
                <span>{cta.message}</span>
         {/if}
     {/if}
-
 </div>
