added query value to search bar and moved results found message to top of search results

--- a/src/ui/assets/styles/common/_global.scss
+++ b/src/ui/assets/styles/common/_global.scss
@@ -9,6 +9,10 @@ hr.clear {
 	@include grid-column(1/6);
 }
 
+.search-lede {
+	font-size: 19px;
+}
+
 .flash-message {
 	background: #28a197;
 	color: #fff;
