changed duplicate ID to unique ID

--- a/src/ui/component/LeftSearchBox.html
+++ b/src/ui/component/LeftSearchBox.html
@@ -1,6 +1,6 @@
 <aside role="complementary">
     <form autocomplete="off" name="searchLearning" method="get" action="/search">
-        <input type="hidden" id="q" name="q" value="{ query }" />
+        <input type="hidden" id="query" name="q" value="{ query }" />
         <div class="lpg-related-items form-group govuk-related-items--search leftSearchBox">
             <fieldset>
                 <legend>
