--- a/src/ui/component/Tile.html
+++ b/src/ui/component/Tile.html
@@ -38,11 +38,10 @@
 	</p>
 	<p class="tile__actions">
 		<a href="/suggestions-for-you/add/{course.id}{home ? '?ref=home' :''}">
-			Add to learning plan
+			Add <span class="visually-hidden">{course.title}</span> to learning plan
 		</a>
 		<a href="/suggestions-for-you/remove/{course.id}{home ? '?ref=home' :''}">
-			Remove
-			<span class="visuallyhidden">from suggested learning list</span>
+			Remove <span class="visually-hidden">{course.title} from suggested learning list</span>
 		</a>
 	</p>
 </div>
