added hidden open/closed message in the menu for screen readers

--- a/src/ui/component/Header.html
+++ b/src/ui/component/Header.html
@@ -10,7 +10,7 @@
         </div>
         <div class="header-proposition">
             <div class="content">
-                <a href="#proposition-links" class="js-header-toggle menu">Menu</a>
+                <a href="#proposition-links" class="js-header-toggle menu">Menu <span class="visually-hidden" id="visiblyHidden">closed</span></a>
                 <Nav/>
             </div>
         </div>
