--- a/src/ui/component/Header.html
+++ b/src/ui/component/Header.html
@@ -22,8 +22,8 @@
 <div class="phase-banner">
     <p>
         <strong class="phase-tag">BETA</strong>
-        <span>This is a new service – your
-            <a class="lpg-feedback-link" href="https://www.smartsurvey.co.uk/s/CSHR-Privatebeta/" target="_blank">feedback</a>&nbsp;will help us to improve it.</span>
+        <span>Complete our survey to 
+            <a class="lpg-feedback-link" href="https://www.smartsurvey.co.uk/s/CSHR-Privatebeta/" target="_blank">help us improve our new service</a> (opens in new window).</span>
     </p>
 </div>
 
