--- a/src/ui/component/Tile.html
+++ b/src/ui/component/Tile.html
@@ -7,7 +7,7 @@
 	{#if home}
 	<p class="tile__attribution">{isLast ? 'Department:' : 'Work area: '}
 	{#if isLast}
-     {$i18n('department')[$signedInUser.department]}
+     {$signedInUser.organisationalUnit.name}
 	{:elseif course.getAreasOfWork().length}
 	    {#each course.getAreasOfWork() as aow, index}
 	        {$i18n('areaOfWork')[aow]}{course.getAreasOfWork().length !== index + 1 ? ', ' : ''}
