changed module course quantification message

--- a/src/ui/component/DisciteCourse.html
+++ b/src/ui/component/DisciteCourse.html
@@ -10,7 +10,7 @@
     {#if course.modules.length > 1 }
         <div class="discite__area">
             <p class="font-small discite__counter">
-                This course comprises of {course.modules.length} modules
+                This course has {course.modules.length} modules
             </p>
         </div>
     {/if}
