changed completed module text

--- a/src/ui/component/LearningRecordTable.html
+++ b/src/ui/component/LearningRecordTable.html
@@ -4,7 +4,7 @@
             <th class="table--fix-first">Course title</th>
             <th>Type</th>
             <th>Duration</th>
-            <th>Completion date</th>
+            <th>Date completed</th>
         </tr>
     </thead>
     <tbody>
