[LPFG-1047][STYLE] Linting

--- a/src/ui/component/SuggestionsSection.html
+++ b/src/ui/component/SuggestionsSection.html
@@ -33,6 +33,9 @@
           <p><a href="/search?{type}={code}">Show all suggestions from {title}</a></p>
       {/if}
       </div>
+      <div>
+          Back to top
+      </div>
   </div>
 
 
