--- a/src/ui/component/DisciteFeedback.html
+++ b/src/ui/component/DisciteFeedback.html
@@ -35,7 +35,7 @@
                 <span class="visuallyhidden">Duration:</span> {module.getDuration() || ''}
             </li>
             <li class="discite__property-item">
-                <span class="visuallyhidden">Cost:</span> &pound;{module.price || 'Free'}
+                <span class="visuallyhidden">Cost:</span> &pound;{module.price + ' (ex VAT)' || 'Free'}
             </li>
         </ul>
         <div class="discite__status">
