--- a/src/ui/component/Tile.html
+++ b/src/ui/component/Tile.html
@@ -20,18 +20,15 @@
                 <span class="tile__key">Type</span>
                 <span class="tile__value">{$i18n(course.getType())}</span>
             </li>
-
             <li class="tile__property">
                 <span class="tile__key">Duration</span>
                 <span class="tile__value">{course.getDuration()}</span>
             </li>
-
-
             <li class="tile__property">
-                <span class="tile__key">Cost</span>
-                <span class="tile__value">&pound;{course.getCost() || 'Free'}</span>
+                <span class="tile__key">Cost</span>	
+                <span class="tile__value">&pound;{#if !course.getCost()}Free{:else}{course.getCost() + ' (ex VAT)'}{/if}
+				</span>
             </li>
-
     </ul>
 	<p>
 		{course.shortDescription}
