--- a/src/ui/component/disciteParts/DisciteCourseProperties.html
+++ b/src/ui/component/disciteParts/DisciteCourseProperties.html
@@ -19,7 +19,7 @@
         </li>
         {#if !course.isRequired()}
         <li class="discite__property-item">
-            <span class="visuallyhidden">Cost:</span> &pound;{course.getCost() || 'Free'}
+            <span class="visuallyhidden">Cost:</span> &pound;{#if !course.getCost()}Free{:else}{course.getCost() + ' (ex VAT)'}{/if}
         </li>
         {/if}
     </ul>
