feedback forms elemsnts are now keyboard focusable

--- a/src/ui/assets/styles/common/_variables.scss
+++ b/src/ui/assets/styles/common/_variables.scss
@@ -5,7 +5,6 @@
 $space: 5px;
 $space-class-values: (5, 10, 15, 30, 45);
 
-
 /* Global footer */
 $proposition-border: #2e3133;
 // Based on GOV.UK brand blue but slightly lighter so it hits contrast on the
@@ -21,6 +20,7 @@ $footer-link-hover: #171819;
 $footer-text: $footer-link;
 $optional-text: $footer-text;
 
+$focus: #ffbf47;
 $grey: #aaa;
 $light-grey: #f8f8f8;
 $white: #fff;
