--- a/src/ui/assets/styles/components/_accessible-auto-complete.scss
+++ b/src/ui/assets/styles/components/_accessible-auto-complete.scss
@@ -45,7 +45,7 @@
 		}
 		@include m(focused) {
 			outline-offset: 0;
-			outline: 3px solid #ffbf47;
+			outline: 3px solid $focus;
 		}
 		@include m(show-all-values) {
 			padding: 4px 34px 4px 4px;
