--- a/src/ui/component/disciteParts/DisciteCourseMain.html
+++ b/src/ui/component/disciteParts/DisciteCourseMain.html
@@ -1,11 +1,11 @@
 <div class="discite__main {modifier ? `discite__main--${modifier}` : '' }">
     {#if course.getType() === 'link'}
         <h3 class="heading discite__heading lpg-course-name">
-            <a tabindex="1" target="_blank" href="/courses/{course.id}">{course.title}</a>
+            <a target="_blank" href="/courses/{course.id}">{course.title}</a>
         </h3> 
     {:else}
         <h3 class="heading discite__heading lpg-course-name">
-            <a tabindex="2" class="lpg-course-link" href="/courses/{course.id}">{course.title}</a>
+            <a class="lpg-course-link" href="/courses/{course.id}">{course.title}</a>
         </h3>   
     {/if}
 </div>
