--- a/src/ui/component/DisciteCourse.html
+++ b/src/ui/component/DisciteCourse.html
@@ -34,6 +34,9 @@
     </slot>
 
 
+        <div class="discite__item--event">
+            <span class="meta">{test}</span>
+        </div>
 </div>
 
 <script>
